--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .btn {
